# rustrland

./: .SRCINFO  .gitignore  AGENTS.md  ANIMATION_SYSTEM.md  AUR_README.md  AUR_SUBMISSION.md  CLAUDE.md  Cargo.toml  HOT_RELOAD_SYSTEM.md  KEYBINDINGS.md  Makefile  PKGBUILD  PKGBUILD.git  README.md  cliff.toml  default.nix  deny.toml  install-keybindings.sh  test-config.toml  test_fromright.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
benches/: scratchpads_bench.rs
docs/: ANIMATION_SYSTEM.md  EXPOSE.md  HOT_RELOAD_SYSTEM.md  KEYBINDINGS.md  LOST_WINDOWS.md  MAGNIFY.md  MONITORS.md  PLUGINS.md  SCRATCHPADS.md  SCRATCHPAD_RESEARCH.md  SHIFT_MONITORS.md  STYLE_HYPRLAND.md  STYLE_HYPRLAND_FR.md  SYSTEM_NOTIFIER.md  TOGGLE_SCRATCHPAD_ANALYSIS.md  TOGGLE_SPECIAL.md  WALLPAPERS.md  WORKSPACES_FOLLOW_FOCUS.md
docs/hyprland-rs/: README.md  api-reference.md  examples.md  integration-notes.md  modules.md  overview.md
examples/: advanced-animations.toml  animated_window_launcher.rs  animation-test.toml  animation.rs  animation_showcase.rs  arc-implementation-plan.md  arc-memory-benchmark.rs  arc-optimization-example.rs  debug_easing.rs  dual-config.toml  expose-config.toml  foot_floating_test.rs  hot-reload-demo.toml  kitty-scratchpad.toml  magnify-config.toml  pyprland-compatible.toml  rustrland-native.toml  rustrland.toml  scratchpads-complete.toml  scratchpads-new-features.toml  system_notifier_simple_enhanced.toml  terminal_animation.rs  terminal_animation_visual.rs  test_easing.rs  test_zoom_api.rs  workspaces-arc-optimized.rs  workspaces-config.toml  workspaces-enhanced.toml
scripts/: pre-push.sh
src/: client.rs  gui_main.rs  lib.rs  main.rs
src/animation/: easing.rs  mod.rs  properties.rs  timeline.rs  window_animator.rs
src/config/: mod.rs
src/core/: daemon.rs  event_handler.rs  global_cache.rs  hot_reload.rs  mod.rs  plugin_manager.rs
src/gui/: mod.rs  standalone_carousel.rs  wallpaper_carousel.rs
src/ipc/: enhanced_client.rs  mod.rs  protocol.rs  server.rs
src/plugins/: expose.rs  lost_windows.rs  magnify.rs  mod.rs  monitors.rs  scratchpads.rs  shift_monitors.rs  system_notifier.rs  toggle_special.rs  wallpapers.rs  wallpapers.rs.backup  workspaces_follow_focus.rs
tests/: integration_test.rs
