[package]
name = "rustrland"
version = "0.2.3"
edition = "2021"
authors = ["Rustrland Contributors"]
license = "MIT"
description = "A Rust implementation of Pyprland for Hyprland - Fast, reliable plugin system"
repository = "https://github.com/mattdef/rustrland"
keywords = ["hyprland", "wayland", "plugins", "window-manager"]
categories = ["command-line-utilities", "os::unix-apis"]

[lib]
name = "rustrland"
path = "src/lib.rs"

[[bin]]
name = "rustrland"
path = "src/main.rs"

[[bin]]
name = "rustr"
path = "src/client.rs"

[dependencies]
# IPC Hyprland
hyprland = "0.4.0-beta.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
shellexpand = "3.1"
futures = "0.3"
serde_json = "1.0.142"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
